Fix horizontal scrollbars in digitizer where they should not appear

--- a/src/Mapbender/DataManagerBundle/Resources/styles/dataManager.element.scss
+++ b/src/Mapbender/DataManagerBundle/Resources/styles/dataManager.element.scss
@@ -105,6 +105,7 @@ $buttonActiveTextColor: #fff !default;
 // Pop-up dialogs
 .popupContent.data-manager-edit-data {
     overflow-y: auto;
+    overflow-x: clip;
     color: #707070;
     font-size: 11px;
 
